@@ -7,6 +7,8 @@ Post-v21.03.0
     (This may take testing and tuning to be effective.)  This version of OVN
     requires DDLog 0.36.
   - Introduce ovn-controller incremetal processing engine statistics
+  - Introduced parallel processing in ovn-northd with the NB_Global config option
+    'use_parallel_build' to enable it.  It is disabled by default.
 
 OVN v21.03.0 - 12 Mar 2021
 -------------------------
